@@ -1,0 +1,5 @@
+#!/usr/bin/ruby -w
+
+# T_421svq3_from_mov
+describe "mkvmerge / Sorenson v3 from MOV"
+test_merge "data/mp4/svq3.mov"
