@@ -1,3 +1,8 @@
+2014-01-12  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mkvmerge: bug fix: fixed muxing Sorenson v3 (SVQ3) video from
+        QuickTime files.
+
 2014-01-11  Moritz Bunkus  <moritz@bunkus.org>
 
         * mkvmerge, mkvextract, mkvpropedit: enhancement: attachments in
